allows authenticated users to change player class

--- a/src/index.css
+++ b/src/index.css
@@ -476,6 +476,11 @@ p.success {
 	margin-right: 0.5rem;
 }
 
+.class-change:hover {
+	cursor: pointer;
+	color: var(--clr-accent);
+}
+
 .team-color-blue {
 	color: var(--clr-team-blue);
 	margin-right: 0.5rem;
