--- a/src/index.css
+++ b/src/index.css
@@ -1,686 +1,33 @@
 /* google font */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+  --color-neutral-neutral-lighter: #f5f5f5;
+  --lochinvar-400: #4b8175;
+  --dark-ff-blue-darker: #051e2a;
+  --dark-ff-blue: #092a3c;
+  --color-system-success-green-light: #dcebe6;
+  --mexican-red-300: #aa302b;
+  --lochinvar-600: #3a6b5e;
+  --lochinvar-900: #2a4d3f;
+  --color-neutral-neutral-dark: #333333;
+  --color-neutral-neutral-light: #cccccc;
+  --color-neutral-white: #ffffff;
+  --color-system-success-green: #4b8175;
+  --color-system-error-red: #aa302b;
+  --international-klein-blue-300: #002cb1;
+  --color-neutral-neutral: #666666;
+  --vanilla-950: #f5f5dc;
+  --lochinvar-800: #2a4d3f;
+  --vanilla-50: #fdf5e6;
+  --color-neutral-black: #000000;
+  --vanilla-300: #f5deb3;
+  --vanilla-700: #deb887;
+  --vanilla-800: #d2b48c;
+  --color-system-error-red-light: #f9d1cf;
+  --color-neutral-neutral-darker: #1a1a1a;
+}
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/**********************************************
-Root variables
-**********************************************/
-:root {
-	--clr--bg-white: #fff;
-	--clr-bg-light: #f1f1f1;
-	--clr-grey-light: #c5c5c5;
-	--clr-grey-lighter: #ddd;
-	--clr-accent: #1aac83;
-	--clr-warning: #f5a623;
-	--clr-error: #830101;
-	--clr-error-bg: #ffcccc;
-	--clr-success: #27914e;
-	--clr-success-bg: #ccffcc;
-	--clr-font-black: #333;
-
-	--clr-team-blue: #002cb2;
-	--clr-team-red: #b2001e;
-	--clr-team-yellow: #ff9c00;
-
-	--ff-def: "Poppins", sans-serif;
-
-	--fw-100: 100;
-	--fw-300: 300;
-	--fw-400: 400;
-	--fw-600: 700;
-	--fw-800: 900;
-}
-
-/**********************************************
-Global styles
-**********************************************/
-/* ----------Resets---------- */
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-	margin: 0;
-}
-
-/* ----------Sections---------- */
-header {
-	background: var(--clr--bg-white);
-	padding: 0.5rem 1rem;
-	position: sticky;
-	width: 100%;
-	top: 0;
-	z-index: 10;
-	border-bottom: 2px solid var(--clr-grey-light);
-	box-shadow: 0.12rem 0.12rem 0.25rem var(--clr-grey-lighter);
-}
-
-header a {
-	text-decoration: none;
-}
-
-body {
-	background: var(--clr-bg-light);
-	font-family: var(--ff-def);
-	color: var(--clr-font-black);
-	accent-color: var(--clr-accent);
-	min-height: 100vh;
-	min-height: 100svh;
-}
-
-/* Make images easier to work with */
-img,
-picture {
-	max-width: 100%;
-	display: block;
-}
-
-nav li {
-	list-style: none;
-}
-
-nav a {
-	text-decoration: none;
-	color: var(--clr-accent);
-}
-
-nav button {
-	background: var(--clr--bg-white);
-	color: var(--clr-accent);
-	font-family: var(--ff-def);
-	font-size: 1rem;
-	border: 0;
-	padding: 0;
-	cursor: pointer;
-}
-
-nav a:is(:hover, :active),
-nav button:is(:hover, :active) {
-	text-decoration: underline;
-}
-
-main {
-	display: grid;
-	gap: 1rem;
-	padding: 1rem;
-	margin: 0 auto;
-}
-
-/* ----------Elements---------- */
-h1 {
-	color: var(--clr-font-black);
-}
-
-a {
-	color: var(--clr-accent);
-}
-
-button {
-	background: var(--clr-accent);
-	color: var(--clr--bg-white);
-	font-family: var(--ff-def);
-	font-size: 1rem;
-	border: 0;
-	border-radius: 0.25rem;
-	padding: 0.5rem;
-	cursor: pointer;
-}
-
-li button {
-	background: var(--clr-error-bg);
-	color: var(--clr-error);
-	font-family: var(--ff-def);
-	font-size: 0.85rem;
-	border: 1px solid var(--clr-error-bg);
-	padding: 0.25rem;
-	cursor: pointer;
-
-	&:hover {
-		border: 1px solid var(--clr-error);
-	}
-}
-
-form button {
-	width: 100%;
-	margin: 0.5rem auto;
-}
-
-form {
-	margin: 1rem auto;
-	padding: 1.5rem;
-	padding-top: 0.5rem;
-	background: var(--clr--bg-white);
-	border-radius: 0.25rem;
-}
-
-input,
-select {
-	padding: 0.75rem;
-	margin-top: 0.75rem;
-	margin-bottom: 1.25rem;
-	width: 100%;
-	border: 1px solid var(--clr-grey-lighter);
-	border-radius: 0.25rem;
-	box-sizing: border-box;
-	font-family: var(--ff-def);
-}
-
-/* ----------Utility---------- */
-.flex {
-	display: flex;
-	gap: 0.5rem;
-}
-
-.flex--column {
-	flex-direction: column;
-}
-
-.flex--wrap {
-	flex-wrap: wrap;
-}
-
-.flex--center {
-	align-items: center;
-	justify-content: center;
-}
-
-.flex--spaceAround {
-	justify-content: space-around;
-}
-
-.flex--spaceBetween {
-	justify-content: space-between;
-}
-
-.flex--1 {
-	flex: 1;
-}
-
-.block {
-	display: block;
-}
-
-.hidden {
-	display: none;
-}
-
-.italic {
-	font-style: italic;
-}
-
-.accent {
-	color: var(--clr-accent);
-}
-
-.border {
-	border: 1px solid var(--clr-grey-lighter);
-	border-radius: 0.25rem;
-}
-
-.margin--top {
-	margin-top: 1rem;
-}
-
-.margin--bottom {
-	margin-bottom: 1rem;
-}
-
-.margin--none {
-	margin: 0;
-}
-
-.divider {
-	border-bottom: 1px solid var(--clr-grey-light);
-	width: 100%;
-	margin: 0.3rem 0;
-}
-
-.btnDelete {
-	background: var(--clr-error-bg);
-	color: var(--clr-error);
-	font-family: var(--ff-def);
-	font-size: 0.85rem;
-	border: 1px solid var(--clr-error-bg);
-	padding: 0.25rem;
-	cursor: pointer;
-
-	&:hover {
-		border: 1px solid var(--clr-error);
-	}
-}
-
-div.error,
-p.error,
-div.success,
-p.success {
-	padding: 0.5rem;
-	border-radius: 0.25rem;
-	margin: 1rem 0;
-}
-
-input.error {
-	border: 1px solid var(--clr-error);
-}
-
-div.error,
-p.error {
-	background: var(--clr-error-bg);
-	border: 1px solid var(--clr-error);
-	color: var(--clr-error);
-}
-
-div.success,
-p.success {
-	background: var(--clr-success-bg);
-	border: 1px solid var(--clr-success);
-	color: var(--clr-success);
-}
-
-/* ----------Login---------- */
-.login,
-.signup {
-	max-width: 25rem;
-}
-
-/* ----------Menu---------- */
-.mainNavWrapper {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 0 auto;
-	max-width: 1170px;
-}
-
-.mainNavUl {
-	display: flex;
-	gap: 0.5rem;
-	flex-direction: column;
-	align-items: flex-end;
-}
-
-.mainNav {
-	display: flex;
-}
-
-.mainNav li {
-	padding-inline: 1rem;
-
-	&:not(:last-child) {
-		border-right: 1px solid var(--clr-grey-light);
-	}
-}
-
-/* ----------Form: Add session---------- */
-.radioButton input[type="radio"] {
-	opacity: 0;
-	position: fixed;
-	width: 0;
-}
-
-.radioButton label {
-	display: inline-block;
-	background-color: var(--clr-grey-lighter);
-	padding: 0.25rem 0.5rem;
-	font-family: var(--ff-def);
-	font-size: 1rem;
-	border-radius: 0.25rem;
-	border: 2px solid transparent;
-}
-
-.radioButton .disabled {
-	background-color: var(--clr-error-bg);
-	color: var(--clr-error);
-}
-
-.radioButton input[type="radio"]:checked + label,
-.radioButton input[type="radio"]:focus + label {
-	background-color: var(--clr-accent);
-	color: var(--clr--bg-white);
-}
-
-.radioButton label:hover {
-	border: 2px solid var(--clr-accent);
-	cursor: pointer;
-}
-
-.radioButton .disabled:hover {
-	border: 2px solid transparent;
-}
-
-/* ----------Player(s) Details---------- */
-.userPropertiesList {
-	margin-top: 0;
-	padding-inline-start: 0;
-	list-style: none;
-}
-
-.goalInputForm {
-	border: 1px solid var(--clr-grey-lighter);
-}
-
-.goalWrapper {
-	margin-top: 0.5rem;
-}
-
-.goalWrapper p {
-	margin-bottom: 0.5rem;
-}
-
-.goalWrapper p span {
-	display: block;
-}
-
-.goalCheckbox {
-	width: max-content;
-	padding: 0;
-	margin: 0;
-	margin-right: 0.5rem;
-	background-color: var(--clr-accent);
-
-	&:hover {
-		cursor: pointer;
-	}
-}
-
-.goalNotSet {
-	color: var(--clr-error);
-}
-
-.goalSet {
-	color: var(--clr-grey-light);
-}
-
-.goalDone {
-	color: var(--clr-success);
-}
-
-.sessionCardsContainer {
-	margin-top: 1rem;
-}
-
-.teamWrapper {
-	margin-top: 2rem;
-}
-
-.teamStats {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 1rem;
-	margin-top: 0.5rem;
-}
-
-.players,
-.player {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-	gap: 1rem;
-	margin-top: 1rem;
-}
-
-.sessionWeekCard {
-	background: var(--clr--bg-white);
-	border-radius: 0.25rem;
-	margin-bottom: 2rem;
-	padding: 1rem;
-	position: relative;
-	box-shadow: 0.12rem 0.12rem 0.25rem var(--clr-success);
-}
-
-.players-details,
-.sessions-details {
-	background: var(--clr--bg-white);
-	border-radius: 0.25rem;
-	padding: 1rem;
-	position: relative;
-	box-shadow: 0.12rem 0.12rem 0.25rem var(--clr-grey-lighter);
-}
-
-.sessions-details {
-	margin-block: 0.5rem;
-}
-
-.players-details p,
-.sessions-details p {
-	font-size: 0.9rem;
-	color: var(--clr-font-black);
-}
-
-.span-players-info {
-	margin-left: 0.5rem;
-	font-size: 0.75rem;
-	color: var(--clr-font-black);
-	text-transform: uppercase;
-}
-
-.players-details a {
-	text-decoration: none;
-}
-
-.sessions-details i,
-.goal-done {
-	color: var(--clr-accent);
-}
-
-.class-icon {
-	color: var(--clr-grey-light);
-	margin-right: 0.5rem;
-}
-
-.class-change:hover {
-	cursor: pointer;
-	color: var(--clr-accent);
-}
-
-.team-color-blue {
-	color: var(--clr-team-blue);
-	margin-right: 0.5rem;
-}
-
-.team-color-red {
-	color: var(--clr-team-red);
-	margin-right: 0.5rem;
-}
-
-.team-color-yellow {
-	color: var(--clr-team-yellow);
-	margin-right: 0.5rem;
-}
-
-.sessions-details span {
-	position: absolute;
-	top: 1rem;
-	right: 1rem;
-	cursor: pointer;
-	background: var(--clr-bg-light);
-	padding: 0.5rem;
-	border-radius: 50%;
-	color: var(--clr-font-black);
-}
-
-.sessions-details span:hover {
-	background: var(--clr-error-bg);
-}
-
-.spanData {
-	color: var(--clr-font-black);
-	font-size: 0.75rem;
-	margin-left: 1rem;
-	text-transform: uppercase;
-	font-style: italic;
-}
-
-/* ----------Rules---------- */
-.rulesRuleCard {
-	background: var(--clr--bg-white);
-	border-radius: 0.25rem;
-	margin-bottom: 2rem;
-	padding: 1rem;
-	box-shadow: 0.12rem 0.12rem 0.25rem var(--clr-grey-lighter);
-
-	& h3 {
-		margin-bottom: 0.5rem;
-	}
-
-	& p {
-		margin-bottom: 0.5rem;
-	}
-
-	& ul {
-		padding-inline-start: 40px;
-	}
-
-	& li {
-		list-style: disc;
-	}
-}
-
-/* ----------Blogs---------- */
-.blogFormWrapper {
-	width: 100%;
-
-	& h3 {
-		margin-top: 0.5rem;
-	}
-}
-
-.blogInputs {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	gap: 0.5rem;
-
-	& label {
-		flex: 1;
-		min-width: 300px;
-
-		& input {
-			margin-block: 0.25rem;
-		}
-	}
-}
-
-.blogFormTextarea {
-	width: 100%;
-	height: 10rem;
-}
-
-.blogCard {
-	display: flex;
-	flex-direction: column;
-	background: var(--clr--bg-white);
-	border-radius: 0.25rem;
-	margin-bottom: 2rem;
-	padding: 1rem;
-	box-shadow: 0.12rem 0.12rem 0.25rem var(--clr-grey-lighter);
-
-	& .blogTitle {
-		margin-bottom: 1rem;
-		text-transform: uppercase;
-		color: var(--clr-accent);
-		cursor: pointer;
-
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-
-	& p {
-		margin-bottom: 0.5rem;
-	}
-
-	& a {
-		text-decoration: none;
-	}
-
-	& a:hover {
-		text-decoration: underline;
-	}
-}
-
-.video-responsive {
-	overflow: hidden;
-	padding-bottom: 56.25%;
-	position: relative;
-	height: 0;
-}
-
-.video-responsive iframe {
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	position: absolute;
-}
-
-/**********************************************
-Media queries
-**********************************************/
-/* ----------------------------------------Desktop---------------------------------------- */
-@media (min-width: 767px) {
-	main {
-		width: 100%;
-		max-width: 1170px;
-	}
-}
-
-/* ----------------------------------------Tablet---------------------------------------- */
-@media (max-width: 766px) {
-	.mainNavWrapper {
-		flex-direction: column;
-	}
-	.mainNavUl {
-		align-items: center;
-	}
-	.mainNav {
-		flex-wrap: wrap;
-	}
-}
-
-/* ----------------------------------------Mobile---------------------------------------- */
-@media (max-width: 390px) {
-	header {
-		padding: 0.25rem;
-	}
-
-	main {
-		padding: 0.5rem;
-	}
-
-	form {
-		padding: 0.5rem;
-	}
-
-	a {
-		& h1 {
-			text-align: center;
-		}
-	}
-
-	.blogCard {
-		padding: 0.5rem;
-	}
-
-	.blogInputs {
-		& label {
-			min-width: 100%;
-		}
-	}
-
-	.mainNav {
-		justify-content: center;
-	}
-}
