--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   --color-neutral-white: #ffffff;
   --color-system-success-green: #4b8175;
   --color-system-error-red: #aa302b;
-  --international-klein-blue-300: #002cb1;
+  --international-klein-blue-300: #7dcbc7;
   --color-neutral-neutral: #666666;
   --vanilla-950: #f5f5dc;
   --lochinvar-800: #2a4d3f;
